fix scroll on mobile

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,6 +1,5 @@
 html {
 	min-height: 100%;
-	overflow-x: clip;
 	scroll-padding-top: var(--header-height);
 	scroll-behavior: smooth;
 }
@@ -43,6 +42,10 @@ body {
 	&::-webkit-scrollbar-thumb:hover {
 		background-color: var(--primary-300);
 	}
+}
+
+.main {
+	overflow-x: clip;
 }
 
 a,
